--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User MV</title>
-</head>
-<body>
-    <h1>
-        Hello World!
-    </h1>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body>
+    <div class="p-4">
+      <h1 class="text-6xl font-black">Hello World!</h1>
 
-    <p>
-        This is my first github repo.
-        I just learned about github pages and decided to check this out.
-    </p>
-</body>
+      <p class="text-3xl">This is my first github repo. I just learned about github pages and decided to check this out.</p>
+
+      <div class="mt-6 pl-2">
+        <ol class="relative border-l border-gray-200">
+          <li class="mb-10 ml-4">
+            <div class="absolute -left-1.5 mt-1.5 h-3 w-3 rounded-full border border-white bg-gray-200"></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-400">June 2022</time>
+            <h3 class="text-lg font-semibold text-gray-900">First repo</h3>
+            <p class="text-base font-normal text-gray-500">Starting getting familiar with github</p>
+          </li>
+          <li class="mb-10 ml-4">
+            <div class="absolute -left-1.5 mt-1.5 h-3 w-3 rounded-full border border-white bg-gray-200"></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-400">July 2022</time>
+            <h3 class="text-lg font-semibold text-gray-900">Launching first pet project</h3>
+            <p class="text-base font-normal text-gray-500">Building and launching first prototype of a future startapp</p>
+          </li>
+          <li class="ml-4">
+            <div class="absolute -left-1.5 mt-1.5 h-3 w-3 rounded-full border border-white bg-gray-200"></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-400">Distant future</time>
+            <h3 class="text-lg font-semibold text-gray-900">Conquest of the Moon 🚀</h3>
+            <p class="text-base font-normal text-gray-500">Conquering the Moon on the horse with Shashka and Nagaika</p>
+          </li>
+        </ol>
+      </div>
+    </div>
+  </body>
 </html>
